Fix quoter text alignment

--- a/style.css
+++ b/style.css
@@ -93,4 +93,5 @@
 }
 #quoter {
     text-align: right;
+    font-weight: 700;
 }
